--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button class="btn-primary">Contact</button>
 
             </div>
-            <img class="banner-image" src="/images/hardy.png" alt="Hardy's Image">
+            <img class="banner-image" src="images/hardy.png" alt="Hardy's Image">
         </div>
     </header>
     <main >
@@ -68,17 +68,17 @@
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/react.png" alt="React Image">
+                    <img src="images/icons/react.png" alt="React Image">
                     <h3 class="skill-title">React</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/nodejs.png" alt="Node Js Image">
+                    <img src="images/icons/nodejs.png" alt="Node Js Image">
                     <h3 class="skill-title">Node.js</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
                 <div class="skill">
-                    <img src="/images/icons/mongo.png" alt="Mongo Image">
+                    <img src="images/icons/mongo.png" alt="Mongo Image">
                     <h3 class="skill-title">MongoDB</h3>
                     <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </div>
@@ -157,9 +157,9 @@
             <div class="footer-column">
                 <h3 class="second-title">Lets Connect</h3>
                 <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
-                <div><a href=""><img src="/images/icons/facebook.png" alt=""></a>
-                    <a href=""><img src="/images/icons/insta.png" alt=""></a>
-                    <a href=""><img src="/images/icons/twitter.png" alt=""></a></div>
+                <div><a href=""><img src="images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="images/icons/insta.png" alt=""></a>
+                    <a href=""><img src="images/icons/twitter.png" alt=""></a></div>
             </div>
     
             <div class="footer-column">
