--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Styles/style.css">
+    <script src="https://kit.fontawesome.com/83fdfc2494.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="overall-dim" class="work-sans-normal">
@@ -26,8 +27,8 @@
                 <h3 class="banner-greetings">Hi, I  am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
 
             </div>
             <img class="banner-image" src="images/hardy.png" alt="Hardy's Image">
@@ -149,7 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="text-center"><button class="btn-primary resume-download-cv">Download CV</button></div>
+            <div class="text-center"><button class="btn-primary resume-download-cv"><i class="fa-solid fa-download"></i> Download CV</button></div>
           </section>
 
           <!-- footer starts here -->
